--- a/PRY-Proyecto Parcial 1/views/agregar_musica.html
+++ b/PRY-Proyecto Parcial 1/views/agregar_musica.html
@@ -1,18 +1,18 @@
-<div class="container py-4">
-    <h2 class="mb-4">Agregar Canción</h2>
+<div class="container py-4" >
+    <h2 class="mb-4 text-white">Agregar Canción</h2>
     <form id="formAgregarCancion" class="needs-validation" novalidate>
         <div class="mb-3">
-            <label for="tituloCancion" class="form-label">Título de la canción</label>
+            <label for="tituloCancion" class="form-label text-white" >Título de la canción</label>
             <input type="text" class="form-control" id="tituloCancion" name="tituloCancion" required>
             <div class="invalid-feedback">Ingrese el título.</div>
         </div>
         <div class="mb-3">
-            <label for="artistaCancion" class="form-label">Artista</label>
+            <label for="artistaCancion" class="form-label text-white">Artista</label>
             <input type="text" class="form-control" id="artistaCancion" name="artistaCancion" required>
             <div class="invalid-feedback">Ingrese el artista.</div>
         </div>
         <div class="mb-3">
-            <label for="generoCancion" class="form-label">Género</label>
+            <label for="generoCancion" class="form-label text-white">Género</label>
             <input type="text" class="form-control" id="generoCancion" name="generoCancion" required>
             <div class="invalid-feedback">Ingrese el género.</div>
         </div>
